@@ -35,4 +35,5 @@ application {
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
 }
